Kapitel3: Unterkapitel Berechnung der Fensterung fertig

--- a/cvl_bachelor_thesis.tex
+++ b/cvl_bachelor_thesis.tex
@@ -117,7 +117,8 @@
   stepnumber=1,
   showstringspaces=false,
   breaklines=true,
-  frame=lines,
+  frame=single,
+  captionpos=b
 }
 
 % ------------------------------------------------
