--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -116,7 +116,6 @@
   timestamp = {2014.08.25}
 }
 
-
 @OTHER{webgl-spec-14,
   author = {Khronos Group},
   title = {WebGL 2 Specification},
@@ -135,6 +134,12 @@
   timestamp = {2014.08.25}
 }
 
+@OTHER{webgl-introduction,
+  author = {Microsoft},
+  title = {Erste Schritte mit WebGL},
+  howpublished = {\url{http://msdn.microsoft.com/de-de/library/dn385807(v=vs.85).aspx}},
+  timestamp = {2014.09.30}
+}
 
 
 @OTHER{flash-14,
