--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -99,6 +99,8 @@ so wird beim Navigieren durch das Volume in einem Fenster die Position der Schni
 \subsection{XYZ - PACS Workstation}
 \label{sec:XYZ - PACS Workstation}
 
+%Abschließend angeben dass die Bildsuche bei keinen dieser systeme möglich ist
+
 
 %TODO: Kontakt markus .... was gibst schon
 %TODO: Kontakt markus .... pacs workstations
