Kapitel1: Hinzugefügten bereich markiert

--- a/s1_introduction.tex
+++ b/s1_introduction.tex
@@ -57,12 +57,12 @@ Dazu muss das User-Interface die grundlegenden Funktionen eines Betrachtungstool
 %----------------------------------------------
 \subsubsection{Java basiertes Interface}
 \label{sec:Java basiertes Interface}
-Paralell zu dieser Applikation wurde im Rahmen des KRESMOI-Projektes auch einen auf Java basierendes Interface System entwickelt,
+\C{Paralell zu dieser Applikation wurde im Rahmen des KRESMOI-Projektes auch einen auf Java basierendes Interface System entwickelt,
 welches eine Schnittstelle zum vollständigen Funktionsumfang von KRESHMOI ist.
 Bei diesem System gibt es verschiedene Versionen für Desktop, Browser, Mobile und eine spezielle Radiologie-Version \ref{fig:javabased_interface}, welche nur als Java Anwendung vorliegt.
 Diese verfügt ebenfalls über Tools zur Betrachtung und Interaktion mit den Volumes und zu erstellen von Bild-Suchanfragen.
 Weiters bietet es Tools zum Durchsuchen von Fällen in einem Krankenhaus und weitere Features wie persönliche Bibliothek und kollaborative Tools.
-Im gegensatz zur Java basierten Radiologie-Version liegt das Augenmerk bei dieser Anwendung auf einen möglichst einfachen Zugriff und Verwendung durch den Browser.
+Im gegensatz zur Java basierten Radiologie-Version liegt das Augenmerk bei dieser Anwendung auf einen möglichst einfachen Zugriff und Verwendung durch den Browser.}
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.8\linewidth]{img/c1_javainterface_indexview.png}
